log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: log-output-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: log-output
    template:
        metadata:
            labels:
                app: log-output
        spec:
            containers:
                - name: log-output
                  image: ktatu/log_output
